# tds-project2

./: .gitignore  Dockerfile  LICENSE  data.csv  pyproject.toml  requirements.txt
app/: config.py  main.py  parser.py  runner.py
app/analyzer/: plot_util.py  scrape_wikipedia.py
app/tool/: duck.py  llm.py  plot.py  tables.py  web.py
app/utils/: io.py  text.py  timing.py
